Fixed bug where input:focus was moving element out of view.

--- a/app/styles/pomodoroInfo.css
+++ b/app/styles/pomodoroInfo.css
@@ -88,6 +88,7 @@
     font-size: 1.4rem;
     border-top-left-radius: 4px;
     z-index: 2;
+    border: 1px solid rgb(50, 50, 50);
 }
 
 
